--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div style="box-sizing: border-box;" class="about reveal">
         <h3 class="aboutMe">About Me</h3>
-        <div class="aboutSection">
+        <div class="aboutSection reveal">
             <img class="pic" src="./images/mypics.JPG" alt="">
             <div class="aboutInfo">
                 <i>Hello, I'm CEZA, i'm a Web developer.
