--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
 
     <script src="animation.js"></script>
-    <script src="/Jquery/jquery.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <!-- Initialize Swiper -->
