--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <p style="font-family: Playfair Display;"><i>You can also contact us on our social media</i></p>
             <div class="socialsContainer">
                 <a href="https://www.x.com/Xmemejs"><img style="height: 30px;" src="./images/twitter.PNG" alt=""></a>
-                <a href="https://wa.me/2349015109289"><img style="height: 53px; position: absolute; bottom: -8px;" src="./images/whatsapp.PNG" alt=""></a>
+                <a href="https://wa.me/2349015109289"><img style="height: 53px; position: absolute; bottom: -8px; margin-left: -20px" src="./images/whatsapp.PNG" alt=""></a>
                 <a href="https://www.instagram.com/art_by_irvine"><img style="height: 38px; position: absolute; bottom: 0px;" src="./images/instagram.PNG" alt=""></a>
             </div>
             <p style="text-align: center;">All right Reserved CEZA &#169;</p>
