--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         <div class="text-box">
             <h1 class="h1Hero">Hi! <br> I'm <span class="">CEZA  <span style="color: lightcoral;"><br> Frontend <br> Developer </span></span> </h1>
         </div>
-
-        <img class="aboutPic" src="./images/mypics.JPG" alt="">
     </div>
 
     <h1>
@@ -59,7 +57,7 @@
     <div style="box-sizing: border-box;" class="about reveal">
         <h3 class="aboutMe">About Me</h3>
         <div class="aboutSection reveal">
-            <img class="pic" src="./images/mypics.JPG" alt="">
+            <img class="pic" src="./images/IMG-9663.jpg" alt="">
             <div class="aboutInfo">
                 <i>Hello, I'm CEZA, i'm a Web developer.
                 I've spent approximately 1 year learning and working accross several 
