--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div style="box-sizing: border-box;" class="about reveal">
         <h3 class="aboutMe">About Me</h3>
         <div class="aboutSection reveal">
-            <img class="pic" src="./images/IMG-9663.jpg" alt="">
+            <img class="pic" src="./images/313C3F30-9052-44E4-94E0-85E246A199BC.jpeg" alt="">
             <div class="aboutInfo">
                 <i>Hello, I'm CEZA, i'm a Web developer.
                 I've spent approximately 1 year learning and working accross several 
